--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <div id="registro" class="pantalla visible">
             <div class="logo">
                 <i class="fas fa-volleyball-ball ball-bounce"></i>
-                <h1>reserva de voly</h1>
+                <h1>holis soy la rama jennifer</h1>
             </div>
             
             <h2><i class="fas fa-user-plus sports-icon"></i> Crear Cuenta</h2>
