esta es el nuevo commit

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <div id="registro" class="pantalla visible">
             <div class="logo">
                 <i class="fas fa-volleyball-ball ball-bounce">
-                <h1>holis soy la rama yhury</h1>
+                <h1>holis soy la rama yhury...............</h1>
                 
             
             </div>
